# arus-muss

./: .gitignore  README.md  pyproject.toml  test.signaligner.csv
.github/: dependabot.yml
arus_muss/: __init__.py  classifier.py  cli.py  feature_vector.py  har_model.py
arus_muss/models/: MUSS_HAR-ACTIVITY_VALIDATED-ALL-NDW-SPADES_LAB.har  MUSS_HAR-INTENSITY-ALL-DW_DA-SPADES_LAB.har  MUSS_HAR-INTENSITY-ALL-NDW-SPADES_LAB.har  MUSS_HAR-POSTURE_VALIDATED-ALL-NDW-SPADES_LAB.har
arus_muss/tests/: conftest.py  test_feature_vector.py  test_model.py
