[tool.poetry]
name = "arus-muss"
version = "0.1.0"
description = "Package for MUSS activity recognition algorithm see doi: 10.1249/MSS.0000000000002306"
authors = ["Qu Tang <tang.q@northeastern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
arus = {path = "../.."}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
arus-muss = 'arus_muss.cli:cli'