[tool.poetry]
authors = ["Qu Tang <tang.q@northeastern.edu>"]
description = "Package for MUSS activity recognition algorithm (see doi: 10.1249/MSS.0000000000002306 for the description of the algorithm)."
license = "MIT"
name = "arus-muss"
version = "0.2.0"

[tool.poetry.dependencies]
arus = {version = "^1.1.18", extras = ["dev"]}
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pytest = "^6.2.3"

[tool.poetry.scripts]
arus-muss = 'arus_muss.cli:cli'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
